# aoc25

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  grid_helpers.h
day1/: CMakeLists.txt  main.c
day10/: CMakeLists.txt  main.c  p2.cpp
day11/: CMakeLists.txt  main.c
day12/: CMakeLists.txt  main.c
day2/: CMakeLists.txt  main.c
day3/: CMakeLists.txt  main.c
day4/: CMakeLists.txt  main.c
day5/: CMakeLists.txt  main.c
day6/: CMakeLists.txt  main.c
day7/: CMakeLists.txt  main.c
day8/: CMakeLists.txt  main.c
day9/: CMakeLists.txt  main.c
